Implement QuizReview and refactor structure